<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_report"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.miko.zd.anquanjianchanative.EditReportActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/id_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/id_tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/string_record"
                android:textColor="@color/white"
                android:textSize="@dimen/text_title_size" />

            <TextView
                android:id="@+id/id_tv_complete_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="17dp"
                android:text="@string/string_complete_report"
                android:textColor="@color/white"
                android:textSize="@dimen/text_title_size" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:id="@+id/id_cardView_report"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/id_toolbar"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="2dp"
        app:cardBackgroundColor="@color/recycleItem"
        app:cardElevation="5dp">

        <EditText
            android:id="@+id/id_ed_report"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/string_detail_hint_report"
            android:paddingLeft="17dp"
            android:paddingTop="17dp"
            android:textColorHint="#CDC5BF"
            android:textCursorDrawable="@drawable/bg_cursor_edittext" />
    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:id="@+id/id_rl_check_report"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/id_cardView_report">

        <TextView
            android:id="@+id/id_tv_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="17dp"
            android:text="@string/string_hint_choose_report" />

        <CheckBox
            android:id="@+id/id_cb_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@+id/id_tv_hint"
            android:text="@string/string_checkbox1" />

        <CheckBox
            android:id="@+id/id_cb_second"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@+id/id_cb_first"
            android:text="@string/string_checkbox2" />

        <CheckBox
            android:id="@+id/id_cb_third"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@+id/id_cb_second"
            android:text="@string/string_checkbox3" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/id_rl_check_report">

        <TextView
            android:layout_marginLeft="17dp"
            android:id="@+id/id_tv_add_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_add_photo" />

        <android.support.v7.widget.RecyclerView
            android:layout_marginTop="4dp"
            android:layout_below="@id/id_tv_add_photo"
            android:id="@+id/id_rcyc_report"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp" />
    </RelativeLayout>
</RelativeLayout>
