<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="3dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="4dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:stateListAnimator="@animator/anim_click_raise"
    app:cardBackgroundColor="@color/recycleItem"
    app:cardElevation="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/id_tv_itemName_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/textBlack"
            android:textSize="15sp" />

        <RelativeLayout
            android:id="@+id/id_rl_cb"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/id_tv_itemName_item">

            <TextView
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:layout_centerVertical="true"
                android:layout_marginTop="3dp"
                android:text="检查结果:"
                android:id="@+id/id_tv_hint_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox
                android:layout_centerVertical="true"
                android:id="@+id/id_cb_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="17dp"
                android:layout_toRightOf="@+id/id_tv_hint_check"
                android:text="@string/string_checkbox1" />

            <CheckBox
                android:layout_centerVertical="true"
                android:layout_marginTop="3dp"
                android:id="@+id/id_cb_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_toRightOf="@+id/id_cb_first"
                android:text="@string/string_checkbox2" />

            <CheckBox
                android:id="@+id/id_cb_third"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="3dp"
                android:layout_toRightOf="@+id/id_cb_second"
                android:text="@string/string_checkbox3" />

        </RelativeLayout>
        <EditText
            android:paddingLeft="3dp"
            android:paddingTop="3dp"
            android:gravity="top"
            android:textSize="12sp"
            android:hint="请输入详细信息"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@mipmap/ic_edit_note"
            android:layout_below="@id/id_rl_cb"
            android:id="@+id/id_ed_note"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <android.support.v7.widget.RecyclerView
            android:layout_marginTop="3dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:id="@+id/id_rcyc_edit"
            android:layout_below="@+id/id_ed_note"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="5dp"/>
    </RelativeLayout>


</android.support.v7.widget.CardView>
